<resources>
    <string name="app_name">Practice</string>
    <string name="txt_nearby_restaurants">Nearby restaurants</string>
    <string name="txt_one">You don\'t have to go far to find a good restaurant,</string>
    <string name="txt_two">we have provided all the restaurants that is</string>
    <string name="txt_three">near you</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_four">Select the Favorites Menu</string>
    <string name="txt_five">Now eat well, don\'t leave the house, You can</string>
    <string name="txt_affordable_price">affordable price</string>
    <string name="txt_you_can_eat_at_expensive_restaurants_with">You can eat at expensive restaurants with</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_before_enjoying_foodmedia_services">Before Enjoying Foodmedia Services</string>
    <string name="txt_please_register_first">Please Register First</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_login">Login</string>
    <string name="txt_by_logging_in_or_registering_you_have_agreed_to_the_terms_and_conditions_and_privacy_policy">By logging in or registering, you have agreed to the Terms and Conditions and Privacy Policy.</string>
    <string name="txt_successs">Successs</string>
    <string name="txt_please_check_your_email_for_create_a_new_password">Please check your email for create a new password</string>
    <string name="txt_can_t_get_email">Can\'t get email?</string>
    <string name="txt_resubmit">Resubmit</string>
    <string name="txt_back_email">Back Email</string>
    <string name="txt_sadek_hossen">Sadek Hossen</string>
    <string name="txt_sadekbranding_gmail_com">sadekbranding@gmail.com</string>
    <string name="txt_account_setting">Account setting</string>
    <string name="txt_language">Language</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_rate_us">Rate us</string>
    <string name="txt_new_version">New Version</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_booking_history">Booking History</string>
    <string name="txt_ambrosia_hotel_restaurant"><![CDATA[Ambrosia Hotel & Restaurant]]></string>
    <string name="txt_kazi_deiry_taiger_pass_chittagong">kazi Deiry, Taiger Pass Chittagong</string>
    <string name="txt_check">Check</string>
    <string name="txt_zakir_hossain_rd_chittagong">Zakir Hossain Rd, Chittagong</string>
    <string name="txt_tava_restaurant">Tava Restaurant</string>
    <string name="txt_6_surson_road_chittagong">6 Surson Road, Chittagong</string>
    <string name="txt_haatkhola">Haatkhola</string>
    <string name="txt_booking_more">Booking more</string>
    <string name="txt_booking">Booking</string>
    <string name="txt_details_restaurant">Details Restaurant</string>
    <string name="txt_open_today">Open today</string>
    <string name="txt_10_00_am_12_00_pm">10:00 AM - 12:00 PM</string>
    <string name="txt_list_other_restaurant">List other restaurant</string>
    <string name="txt_check_the_menu_at_this_restaurant">check the menu at this restaurant</string>
    <string name="txt_see_all">See All</string>
</resources>